adding more design to the login page

--- a/login-reg-design/login.html
+++ b/login-reg-design/login.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <h1>login</h1>
+    <main>
+        <div class="background">
+            <div class="text">
+                <h1>Login</h1>
+                <p>No Account? <a href="">Sign Up</a></p>
+                <div class="box">
+                    <form action="" class="form">
+                        <input type="email" name="email" id="" class="email" placeholder="Email" required>
+                        <input type="password" name="" id="" class="password" placeholder="Password" required>
+                        <input type="submit" name="" id="">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
