login page design done

--- a/login-reg-design/login.html
+++ b/login-reg-design/login.html
@@ -11,7 +11,7 @@
         <div class="background">
             <div class="text">
                 <h1>Login</h1>
-                <p>No Account? <a href="">Sign Up</a></p>
+                <p>No Account? <a href="register.html">Sign Up</a></p>
             </div>
             <div class="box">
                 <form action="" class="form">
