--- a/login-reg-design/game.html
+++ b/login-reg-design/game.html
@@ -7,8 +7,8 @@
     <style>
         .block{
             background-color: red;
-            width: 50px;
-            height: 50px;
+            width: 20px;
+            height: 20px;
             border: white solid 1px;
         }
         .row{
@@ -18,7 +18,17 @@
     </style>
 </head>
 <body>
-    <h1 style="font-size: 50px;"><a href="login.html">Login</a></h1>
+    <header>
+        <nav>
+            <ul>
+                <li><h1 style="font-size: 50px;"><a href="login.html">Logout</a></h1></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+    </header>
     <div class="row">
         <div class="block"></div>
         <div class="block"></div>
@@ -46,6 +56,33 @@
         <div class="block"></div>
         <div class="block"></div>
         <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        
     </div>
     <div class="row">
         <div class="block"></div>
