--- a/login-reg-design/login.html
+++ b/login-reg-design/login.html
@@ -14,7 +14,7 @@
                 <p>No Account? <a href="register.html">Sign Up</a></p>
             </div>
             <div class="box">
-                <form action="" class="form">
+                <form action="/character.html" class="form">
                     <input type="email" name="email" id="" class="email" placeholder="Email" required>
                     <input type="password" name="" id="" class="password" placeholder="Password" required>
                     <input type="submit" name="" id="">
