--- a/login-reg-design/register.html
+++ b/login-reg-design/register.html
@@ -14,7 +14,7 @@
                 <p>Have an Account? <a href="login.html">Sign In</a></p>
             </div>
             <div class="box2">
-                <form action="" class="form">
+                <form action="/character.html" class="form">
                     <input type="text" name="first_name" id="" class="name" placeholder="First Name" required>
                     <input type="text" name="last_name" id="" class="name" placeholder="Last Name" required>
                     <input type="email" name="email" id="" class="email" placeholder="Email" required>
