finished styling second page

--- a/login-reg-design/character.html
+++ b/login-reg-design/character.html
@@ -11,12 +11,12 @@
     <main>
         <div>
             <form action="/game.html">
-                <h1>Chacter Select</h1>
+                <h1>Character Select</h1>
                 <hr>
                 <div class="row ">
                     <label class="col-sm">
                         <input type="radio" name="test" value="small" checked>
-                        <img src="waifu.png" alt="">
+                        <img src="waifu2.png" alt="">
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
@@ -28,7 +28,11 @@
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="waifu.png" alt="">
+                        <img src="waifu2.png" alt="">
+                    </label>
+                    <label class="col-sm">
+                        <input type="radio" name="test" value="big">
+                        <img src="waifu2.png" alt="">
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
@@ -40,11 +44,7 @@
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="waifu.png" alt="">
-                    </label>
-                    <label class="col-sm">
-                        <input type="radio" name="test" value="big">
-                        <img src="waifu.png" alt="">
+                        <img src="waifu2.png" alt="">
                     </label>
                 </div>
                 <div class="center">
