--- a/login-reg-design/boss.html
+++ b/login-reg-design/boss.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Play</title>
+    <title>Boss Fight</title>
     <link rel="stylesheet" href="boss.css">
 </head>
 <body>
