started Shop and Player Page

--- a/login-reg-design/game.html
+++ b/login-reg-design/game.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href=""><h1 class="logo">UserName</h1></a>
+        <a href="stats.html"><h1 class="logo">UserName</h1></a>
         <nav>
             <ul class="nav_links">
                 <li>
@@ -32,7 +32,6 @@
                         <h3>Gear</h3>
                         <p>Tools</p>
                     </a>
-                    
                 </li>
             </ul>
         </nav>
