--- a/login-reg-design/boss.html
+++ b/login-reg-design/boss.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href=""><h1 class="logo">UserName</h1></a>
+        <a href="stats.html"><h1 class="logo">UserName</h1></a>
         <nav>
             <ul class="nav_links">
                 <li>
