placed hearts for health metter

--- a/login-reg-design/game.html
+++ b/login-reg-design/game.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Play</title>
-    <link rel="stylesheet" href="boss.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="game.css">
 </head>
 <body>
     <header>
@@ -13,7 +14,13 @@
             <ul class="nav_links">
                 <li>
                     <h3>Health</h3>
-                    <p>100%</p>
+                    <div>
+                        <span class="fa fa-heart life"></span>
+                        <span class="fa fa-heart life"></span>
+                        <span class="fa fa-heart life"></span>
+                        <span class="fa fa-heart life"></span>
+                        <span class="fa fa-heart hit"></span>
+                    </div>
                 </li>
                 <li>
                     <h3>Attack</h3>
