--- a/login-reg-design/boss.html
+++ b/login-reg-design/boss.html
@@ -6,6 +6,7 @@
     <title>Boss Fight</title>
     <link rel="stylesheet" href="boss.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -35,16 +36,77 @@
                     <p>500</p>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="#" id="myBtn">
                         <h3>Gear</h3>
-                        <p>Tools</p>
+                        <p>Battle Axe</p>
                     </a>
-                    
                 </li>
             </ul>
         </nav>
         <a class="cta" href="login.html"><button>Logout</button></a>
     </header>
+    <div id="modalContainer">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <form action="">
+                <h1>Choose Weapon</h1>
+                <hr>
+                <div class="row ">
+                    <label class="col-sm">
+                        <input type="radio" name="test" value="small" checked>
+                        <img src="scythe.png" alt="">
+                        <p class="gear">power</p>
+                        <p class="gear">100</p>
+                    </label>
+                    <label class="col-sm">
+                        <input type="radio" name="test" value="big">
+                        <img src="scythe.png" alt="">
+                        <p class="gear">power</p>
+                        <p class="gear">100</p>
+                    </label>
+                    <label class="col-sm">
+                        <input type="radio" name="test" value="big">
+                        <img src="scythe.png" alt="">
+                        <p class="gear">power</p>
+                        <p class="gear">100</p>
+                    </label>
+                    <label class="col-sm">
+                        <input type="radio" name="test" value="big">
+                        <img src="scythe.png" alt="">
+                        <p class="gear">power</p>
+                        <p class="gear">100</p>
+                    </label>
+                    <label class="col-sm">
+                        <input type="radio" name="test" value="big">
+                        <img src="scythe.png" alt="">
+                        <p class="gear">power</p>
+                        <p class="gear">100</p>
+                    </label>
+                    <label class="col-sm">
+                        <input type="radio" name="test" value="big">
+                        <img src="scythe.png" alt="">
+                        <p class="gear">power</p>
+                        <p class="gear">100</p>
+                    </label>
+                    <label class="col-sm">
+                        <input type="radio" name="test" value="big">
+                        <img src="scythe.png" alt="">
+                        <p class="gear">power</p>
+                        <p class="gear">100</p>
+                    </label>
+                    <label class="col-sm">
+                        <input type="radio" name="test" value="big">
+                        <img src="scythe.png" alt="">
+                        <p class="gear">power</p>
+                        <p class="gear">100</p>
+                    </label>
+                </div>
+                <div class="center">
+                    <button type="submit">Select Character</button>
+                </div>
+            </form>
+        </div>
+    </div>
     <div class="map"></div>
     <div class="row">
         <div class="block"></div>
@@ -2008,4 +2070,18 @@
     </div>
     
 </body>
+<script>
+    $(document).ready(function() {
+
+
+        $("#myBtn").on("click", function() {
+            $("#modalContainer").show();
+        });
+
+        $(".close").on("click", function() {
+            $("#modalContainer").hide();
+        });
+
+    });
+</script>
 </html>
