created JS FIle

--- a/login-reg-design/boss.html
+++ b/login-reg-design/boss.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="boss.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="game.js"></script>
 </head>
 <body>
     <header>
@@ -55,48 +56,56 @@
                     <label class="col-sm">
                         <input type="radio" name="test" value="small" checked>
                         <img src="scythe.png" alt="">
+                        <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
                         <img src="scythe.png" alt="">
+                        <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
                         <img src="scythe.png" alt="">
+                        <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
                         <img src="scythe.png" alt="">
+                        <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
                         <img src="scythe.png" alt="">
+                        <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
                         <img src="scythe.png" alt="">
+                        <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
                         <img src="scythe.png" alt="">
+                        <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
                         <img src="scythe.png" alt="">
+                        <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
@@ -2068,20 +2077,5 @@
         <div class="block"></div>
         <div class="block"></div>
     </div>
-    
 </body>
-<script>
-    $(document).ready(function() {
-
-
-        $("#myBtn").on("click", function() {
-            $("#modalContainer").show();
-        });
-
-        $(".close").on("click", function() {
-            $("#modalContainer").hide();
-        });
-
-    });
-</script>
 </html>
