almost done with stats page

--- a/login-reg-design/game.html
+++ b/login-reg-design/game.html
@@ -105,7 +105,7 @@
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
                         <img src="scythe.png" alt="">
-                        <p>WPN NAME</p>
+                        <p class="gear">WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
