--- a/login-reg-design/stats.html
+++ b/login-reg-design/stats.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero Status</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="stats.css">
 </head>
 <body>
@@ -28,5 +29,114 @@
             </ul>
         </nav>
     </header>
+    <div class="the-player">
+        <form action="">
+            <!-- info box -->
+            <div class="status">
+                <div class="user-stats">
+                    <div>
+                        <label for="">UserName</label>
+                        <input type="text" name="username" id="">
+                    </div>
+                    <div>
+                        <label for="">Special Ability</label>
+                        <input type="text" name="first_name" id="">
+                    </div>
+                </div>
+                <!-- Weapons -->
+                <div class="gear-info">
+                    <!-- selected Wapon -->
+                    <div class="picked-gear">
+                        <div class="main-img">
+                            <img src="scythe.png" alt="">
+                            <h1>NAME</h1>
+                            <h3>Power</h3>
+                            <p>205</p>
+                        </div>
+                    </div>
+                    <!-- waepon select -->
+                    <div class="gear">
+                        <div class="row ">
+                            <label class="col-sm">
+                                <input type="radio" name="test" value="small" checked>
+                                <img src="waifu2.png" alt="">
+                                <p>Weapon</p>
+                            </label>
+                            <label class="col-sm">
+                                <input type="radio" name="test" value="big">
+                                <img src="waifu.png" alt="">
+                                <p>Weapon</p>
+                            </label>
+                            <label class="col-sm">
+                                <input type="radio" name="test" value="big">
+                                <img src="waifu.png" alt="">
+                                <p>Weapon</p>
+                            </label>
+                            <label class="col-sm">
+                                <input type="radio" name="test" value="big">
+                                <img src="waifu2.png" alt="">
+                                <p>Weapon</p>
+                            </label>
+                        </div>
+                        <div class="row ">
+                            <label class="col-sm">
+                                <input type="radio" name="test" value="big">
+                                <img src="waifu2.png" alt="">
+                                <p>Weapon</p>
+                            </label>
+                            <label class="col-sm">
+                                <input type="radio" name="test" value="big">
+                                <img src="waifu.png" alt="">
+                                <p>Weapon</p>
+                            </label>
+                            <label class="col-sm">
+                                <input type="radio" name="test" value="big">
+                                <img src="waifu.png" alt="">
+                                <p>Weapon</p>
+                            </label>
+                            <label class="col-sm">
+                                <input type="radio" name="test" value="big">
+                                <img src="waifu2.png" alt="">
+                                <p>Weapon</p>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Profile box -->
+            <div class="profile">
+                <div class="user-img">
+                    <img src="goku.png" alt="">
+                    <h1>Goku</h1>
+                    <p>Special Ability</p>
+                    <h3>Ultra Instinct</h3>
+                </div>
+                <div class="stats row">
+                    <div class="abilities col-sm">
+                        <h4>Health</h4>
+                        <p>Power</p>
+                    </div>
+                    <div class="abilities col-sm">
+                        <h4>Health</h4>
+                        <p>Power</p>
+                    </div>
+                    <div class="abilities col-sm">
+                        <h4>Health</h4>
+                        <p>Power</p>
+                    </div>
+                    <div class="abilities col-sm">
+                        <h4>Health</h4>
+                        <p>Power</p>
+                    </div>
+                </div>
+            </div>
+            <!-- About Player box -->
+            <div class="bio">
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+            </div>
+            <button>Update</button>
+            <a href="/game.html">play</a>
+        </form>
+    </div>
 </body>
 </html>
