finished last 2 pages

--- a/login-reg-design/shop.html
+++ b/login-reg-design/shop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero Status</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="shop.css">
 </head>
 <body>
@@ -20,7 +21,7 @@
                     <a class="cta" href="stats.html"><button>Hero Status</button></a>
                 </li>
                 <li>
-                    <a class="cta" href="#"><button>Leader Board</button></a>
+                    <a class="cta" href="game.html"><button>Return to Game</button></a>
                 </li>
                 <li>
                     <a class="cta" href="login.html"><button>Logout</button></a>
@@ -28,5 +29,120 @@
             </ul>
         </nav>
     </header>
+    <div class="market">
+        <div class="profile">
+            <div class="user-img">
+                <img src="goku.png" alt="">
+                <h1>Goku</h1>
+                <p>Special Ability</p>
+                <h3>Ultra Instinct</h3>
+            </div>
+            <div class="stats row">
+                <div class="abilities col-sm">
+                    <h4>Health</h4>
+                    <p>Power</p>
+                </div>
+                <div class="abilities col-sm">
+                    <h4>Health</h4>
+                    <p>Power</p>
+                </div>
+                <div class="abilities col-sm">
+                    <h4>Health</h4>
+                    <p>Power</p>
+                </div>
+                <div class="abilities col-sm">
+                    <h4>Health</h4>
+                    <p>Power</p>
+                </div>
+            </div>
+            <div class="buy-gear">
+                <form action="">
+                    <h1>Scythe</h1>
+                    <hr>
+                    <img src="scythe.png" alt="">
+                    <div>
+                        <p>Attack</p>
+                        <h3>+120</h3>
+                    </div>
+                    <h3 style="margin-top: 40px;">$40 coins</h3>
+                    <button>Buy</button>
+                </form>
+            </div>
+        </div>
+        <div class="shop">
+            <div class="product">
+                <img src="scythe.png" alt="">
+                <div class="prouduct-info">
+                    <h1>Scythe</h1>
+                    <h4>Weapon</h4>
+                    <p>+120</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="scythe.png" alt="">
+                <div class="prouduct-info">
+                    <h1>Scythe</h1>
+                    <h4>Weapon</h4>
+                    <p>+120</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="scythe.png" alt="">
+                <div class="prouduct-info">
+                    <h1>Scythe</h1>
+                    <h4>Weapon</h4>
+                    <p>+120</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="scythe.png" alt="">
+                <div class="prouduct-info">
+                    <h1>Scythe</h1>
+                    <h4>Weapon</h4>
+                    <p>+120</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="scythe.png" alt="">
+                <div class="prouduct-info">
+                    <h1>Scythe</h1>
+                    <h4>Weapon</h4>
+                    <p>+120</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="scythe.png" alt="">
+                <div class="prouduct-info">
+                    <h1>Scythe</h1>
+                    <h4>Weapon</h4>
+                    <p>+120</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="scythe.png" alt="">
+                <div class="prouduct-info">
+                    <h1>Scythe</h1>
+                    <h4>Weapon</h4>
+                    <p>+120</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="scythe.png" alt="">
+                <div class="prouduct-info">
+                    <h1>Scythe</h1>
+                    <h4>Weapon</h4>
+                    <p>+120</p>
+                </div>
+            </div>
+            <div class="product">
+                <img src="scythe.png" alt="">
+                <div class="prouduct-info">
+                    <h1>Scythe</h1>
+                    <h4>Weapon</h4>
+                    <p>+120</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
