--- a/login-reg-design/stats.html
+++ b/login-reg-design/stats.html
@@ -21,7 +21,7 @@
                     <a class="cta" href="stats.html"><button class="select">Hero Status</button></a>
                 </li>
                 <li>
-                    <a class="cta" href="#"><button>Leader Board</button></a>
+                    <a class="cta" href="game.html"><button>Return to Game</button></a>
                 </li>
                 <li>
                     <a class="cta" href="login.html"><button>Logout</button></a>
@@ -134,8 +134,10 @@
             <div class="bio">
                 <textarea name="" id="" cols="30" rows="10"></textarea>
             </div>
-            <button>Update</button>
-            <a href="/game.html">play</a>
+            <div class="btns">
+                <button>Update</button>
+                <a href="/game.html" class="play" style="text-decoration: none;">Play</a>
+            </div>
         </form>
     </div>
 </body>
