--- a/login-reg-design/login.html
+++ b/login-reg-design/login.html
@@ -10,13 +10,26 @@
     <main>
         <div class="background">
             <div class="text">
-                <h1>Login</h1>
-                <p>No Account? <a href="register.html">Sign Up</a></p>
+                <h1>Welcome to Project Week</h1>
+                <p>Sign in or Create an Account</p>
             </div>
             <div class="box">
+                <h1>Login</h1>
                 <form action="/character.html" class="form">
                     <input type="email" name="email" id="" class="email" placeholder="Email" required>
                     <input type="password" name="" id="" class="password" placeholder="Password" required>
+                    <input type="submit" name="" id="">
+                </form>
+            </div>
+            <div class="box2">
+                <h1>Sign Up</h1>
+                <form action="/character.html" class="form">
+                    <input type="text" name="first_name" id="" class="name" placeholder="First Name" required>
+                    <input type="text" name="last_name" id="" class="name" placeholder="Last Name" required>
+                    <input type="email" name="email" id="" class="email" placeholder="Email" required>
+                    <input type="text" name="username" id="" class="username" placeholder="User Name" required>
+                    <input type="password" name="password" id="" class="password" placeholder="Password" required>
+                    <input type="password" name="confirm_password" id="" class="password" placeholder="Confirm Password" required>
                     <input type="submit" name="" id="">
                 </form>
             </div>
