--- a/login-reg-design/game.html
+++ b/login-reg-design/game.html
@@ -111,7 +111,7 @@
                     </label>
                 </div>
                 <div class="center">
-                    <button type="submit">Select Character</button>
+                    <button type="submit">Select Weapon</button>
                 </div>
             </form>
         </div>
