--- a/login-reg-design/character.html
+++ b/login-reg-design/character.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character Select</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="character.css">
+    <link rel="stylesheet" href="css/character.css">
 </head>
 <body>
     <main>
@@ -16,35 +16,35 @@
                 <div class="row ">
                     <label class="col-sm">
                         <input type="radio" name="test" value="small" checked>
-                        <img src="waifu2.png" alt="">
+                        <img src="img/waifu2.png" alt="">
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="waifu.png" alt="">
+                        <img src="img/waifu.png" alt="">
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="waifu.png" alt="">
+                        <img src="img/waifu.png" alt="">
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="waifu2.png" alt="">
+                        <img src="img/waifu2.png" alt="">
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="waifu2.png" alt="">
+                        <img src="img/waifu2.png" alt="">
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="waifu.png" alt="">
+                        <img src="img/waifu.png" alt="">
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="waifu.png" alt="">
+                        <img src="img/waifu.png" alt="">
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="waifu2.png" alt="">
+                        <img src="img/waifu2.png" alt="">
                     </label>
                 </div>
                 <div class="center">
