--- a/login-reg-design/game.html
+++ b/login-reg-design/game.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Play</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="css/game.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="game.js"></script>
+    <script src="js/game.js"></script>
 </head>
 <body>
     <header>
@@ -55,56 +55,56 @@
                 <div class="row ">
                     <label class="col-sm">
                         <input type="radio" name="test" value="small" checked>
-                        <img src="scythe.png" alt="">
+                        <img src="img/scythe.png" alt="">
                         <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="scythe.png" alt="">
+                        <img src="img/scythe.png" alt="">
                         <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="scythe.png" alt="">
+                        <img src="img/scythe.png" alt="">
                         <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="scythe.png" alt="">
+                        <img src="img/scythe.png" alt="">
                         <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="scythe.png" alt="">
+                        <img src="img/scythe.png" alt="">
                         <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="scythe.png" alt="">
+                        <img src="img/scythe.png" alt="">
                         <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="scythe.png" alt="">
+                        <img src="img/scythe.png" alt="">
                         <p>WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
                     </label>
                     <label class="col-sm">
                         <input type="radio" name="test" value="big">
-                        <img src="scythe.png" alt="">
+                        <img src="img/scythe.png" alt="">
                         <p class="gear">WPN NAME</p>
                         <p class="gear">power</p>
                         <p class="gear">100</p>
