--- a/login-reg-design/shop.html
+++ b/login-reg-design/shop.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero Status</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="shop.css">
+    <link rel="stylesheet" href="css/shop.css">
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
     <div class="market">
         <div class="profile">
             <div class="user-img">
-                <img src="goku.png" alt="">
+                <img src="img/goku.png" alt="">
                 <h1>Goku</h1>
                 <p>Special Ability</p>
                 <h3>Ultra Instinct</h3>
@@ -59,7 +59,7 @@
                 <form action="">
                     <h1>Scythe</h1>
                     <hr>
-                    <img src="scythe.png" alt="">
+                    <img src="img/scythe.png" alt="">
                     <div>
                         <p>Attack</p>
                         <h3>+120</h3>
@@ -71,7 +71,7 @@
         </div>
         <div class="shop">
             <div class="product">
-                <img src="scythe.png" alt="">
+                <img src="img/scythe.png" alt="">
                 <div class="prouduct-info">
                     <h1>Scythe</h1>
                     <h4>Weapon</h4>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="scythe.png" alt="">
+                <img src="img/scythe.png" alt="">
                 <div class="prouduct-info">
                     <h1>Scythe</h1>
                     <h4>Weapon</h4>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="scythe.png" alt="">
+                <img src="img/scythe.png" alt="">
                 <div class="prouduct-info">
                     <h1>Scythe</h1>
                     <h4>Weapon</h4>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="scythe.png" alt="">
+                <img src="img/scythe.png" alt="">
                 <div class="prouduct-info">
                     <h1>Scythe</h1>
                     <h4>Weapon</h4>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="scythe.png" alt="">
+                <img src="img/scythe.png" alt="">
                 <div class="prouduct-info">
                     <h1>Scythe</h1>
                     <h4>Weapon</h4>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="scythe.png" alt="">
+                <img src="img/scythe.png" alt="">
                 <div class="prouduct-info">
                     <h1>Scythe</h1>
                     <h4>Weapon</h4>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="scythe.png" alt="">
+                <img src="img/scythe.png" alt="">
                 <div class="prouduct-info">
                     <h1>Scythe</h1>
                     <h4>Weapon</h4>
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="scythe.png" alt="">
+                <img src="img/scythe.png" alt="">
                 <div class="prouduct-info">
                     <h1>Scythe</h1>
                     <h4>Weapon</h4>
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="scythe.png" alt="">
+                <img src="img/scythe.png" alt="">
                 <div class="prouduct-info">
                     <h1>Scythe</h1>
                     <h4>Weapon</h4>
