--- a/login-reg-design/stats.html
+++ b/login-reg-design/stats.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero Status</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="stats.css">
+    <link rel="stylesheet" href="css/stats.css">
 </head>
 <body>
     <header>
@@ -48,7 +48,7 @@
                     <!-- selected Wapon -->
                     <div class="picked-gear">
                         <div class="main-img">
-                            <img src="scythe.png" alt="">
+                            <img src="img/scythe.png" alt="">
                             <h1>NAME</h1>
                             <h3>Power</h3>
                             <p>205</p>
@@ -59,44 +59,44 @@
                         <div class="row ">
                             <label class="col-sm">
                                 <input type="radio" name="test" value="small" checked>
-                                <img src="waifu2.png" alt="">
+                                <img src="img/waifu2.png" alt="">
                                 <p>Weapon</p>
                             </label>
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="waifu.png" alt="">
+                                <img src="img/waifu.png" alt="">
                                 <p>Weapon</p>
                             </label>
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="waifu.png" alt="">
+                                <img src="img/waifu.png" alt="">
                                 <p>Weapon</p>
                             </label>
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="waifu2.png" alt="">
+                                <img src="img/waifu2.png" alt="">
                                 <p>Weapon</p>
                             </label>
                         </div>
                         <div class="row ">
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="waifu2.png" alt="">
+                                <img src="img/waifu2.png" alt="">
                                 <p>Weapon</p>
                             </label>
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="waifu.png" alt="">
+                                <img src="img/waifu.png" alt="">
                                 <p>Weapon</p>
                             </label>
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="waifu.png" alt="">
+                                <img src="img/waifu.png" alt="">
                                 <p>Weapon</p>
                             </label>
                             <label class="col-sm">
                                 <input type="radio" name="test" value="big">
-                                <img src="waifu2.png" alt="">
+                                <img src="img/waifu2.png" alt="">
                                 <p>Weapon</p>
                             </label>
                         </div>
@@ -106,7 +106,7 @@
             <!-- Profile box -->
             <div class="profile">
                 <div class="user-img">
-                    <img src="goku.png" alt="">
+                    <img src="img/goku.png" alt="">
                     <h1>Goku</h1>
                     <p>Special Ability</p>
                     <h3>Ultra Instinct</h3>
